Agora ao escanear um determinado QR code, você é direcionado a uma tela que exibe uma determinada imagem/mapa

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\tools\\android
-flutter.sdk=C:\\tools\\flutter
+sdk.dir=C:\\Android\\Sdk
+flutter.sdk=C:\\Users\\joaon\\Flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
