pug get auto changes

--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\tools\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Fatec\Documents\AndroidStudioProjects\facul_map
+FLUTTER_ROOT=C:\Users\joaon\Flutter
+FLUTTER_APPLICATION_PATH=C:\Flutter\faculmap
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
