--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   simple_barcode_scanner: ^0.1.1
+  flutter_native_splash: ^2.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
