--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
   simple_barcode_scanner: ^0.1.1
   flutter_native_splash: ^2.4.0
 
