--- a/native_splash.yaml
+++ b/native_splash.yaml
@@ -5,7 +5,9 @@ flutter_native_splash:
 
   color: "#ffffff"
   image: "assets/splash_screen_logo.png"
+  branding: "assets/brand.png"
 
   android_12:
     color: "#ffffff"
     image: "assets/splash_screen_logo.png"
+    branding: "assets/brand.png"
